force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/sugati__Suggested_Supplier_Booking__c.object-meta.xml
<CustomObject>
    <label>Suggested Supplier Booking</label>
    <nameField>
        <displayFormat>SUGSB-{000000}</displayFormat>
        <label>Suggested Supplier Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Supplier Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>