force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Auto_Add__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Auto_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the system auto-add this booking (or suggest only)?</description>
    <label>Auto-Add</label>
    <type>Checkbox</type>
</CustomField>