force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Confidence_Weight__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Confidence_Weight__c</fullName>
    <description>Optional confidence specific to this suggestion</description>
    <label>Confidence Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>