force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Default_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Default_Description__c</fullName>
    <description>Predefined notes for the Supplier Booking (e.g., &quot;Half-day&quot;)</description>
    <label>Default Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>