force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Holiday_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Holiday_Component__c</fullName>
    <description>Hotel / Transfer / Excursion / Flight / Activity / etc</description>
    <label>Holiday Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__SB_Components</valueSetName>
    </valueSet>
</CustomField>