force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Opportunity_Refs__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Opportunity_Refs__c</fullName>
    <description>For debugging purposes</description>
    <inlineHelpText>For debug purposes only</inlineHelpText>
    <label>Opportunity Refs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>