force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Order_Offset__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Order_Offset__c</fullName>
    <label>Order Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>