force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Suggested_Day_Offset__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Suggested_Day_Offset__c</fullName>
    <description>Relative day if different from parent rule.

Parent record may be Day 2, but on this record it might be the same or might be Day 1 or 3.</description>
    <label>Suggested Day Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>