force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Suggested_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Suggested_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supplier to be suggested (e.g. Blue Badge Guides).

We need this because even if there might be a supplier, we may need another service by a different supplier.</description>
    <label>Suggested Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Suggested Supplier Bookings</relationshipLabel>
    <relationshipName>Suggested_Supplier_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>