force-app/main/default/objects/sugati__Suggested_Supplier_Booking__c/fields/sugati__S_SSB_Suggestion_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SSB_Suggestion_Rule__c</fullName>
    <description>Parent rule that triggered this suggestion</description>
    <label>Suggestion Rule</label>
    <referenceTo>sugati__Suggestion_Rule__c</referenceTo>
    <relationshipLabel>Suggested Supplier Bookings</relationshipLabel>
    <relationshipName>Suggested_Supplier_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>